--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,9 @@
 </div>
 
 <div>
-  <mat-radio-group>
+  <mat-radio-group [value]="1">
     <mat-radio-button [value]="0">Male</mat-radio-button>
-    <mat-radio-button [value]="1" [checked]="isChecked">Female</mat-radio-button>
+    <mat-radio-button [value]="1">Female</mat-radio-button>
   </mat-radio-group>
 </div>
+
