textarea input field, noice

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,5 +44,11 @@
         Field is required fuckers!
       </mat-error>
     </mat-form-field>
+    <mat-form-field>
+      <textarea
+        name="description"
+        matTextareaAutosize
+        matInput></textarea>
+    </mat-form-field>
   </form>
 </div>
