--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -66,3 +66,7 @@
     <mat-datepicker #picker touchUi="true"></mat-datepicker>
   </mat-form-field>
 </div>
+
+<div>
+  <mat-icon>add_alert</mat-icon>
+</div>
