--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,3 +70,11 @@
 <div>
   <mat-icon>add_alert</mat-icon>
 </div>
+
+<div>
+  <button mat-button>Button1</button>
+  <button color="primary" mat-raised-button>Primary</button>
+  <button color="accent" mat-raised-button>Accent</button>
+  <button color="warn" mat-raised-button>Warn</button>
+  <button color="primary" mat-fab><mat-icon>check</mat-icon></button>
+</div>
