spinner with interval

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -89,3 +89,8 @@
       [selected]="category.selected">{{ category.name }}</mat-chip>
   </mat-chip-list>
 </div>
+
+<div>
+  <mat-progress-spinner mode="determinate" [value]="progress"></mat-progress-spinner>
+  <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+</div>
