--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -94,3 +94,9 @@
   <mat-progress-spinner mode="determinate" [value]="progress"></mat-progress-spinner>
   <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
 </div>
+
+<div>
+  <span
+    matTooltip="Here is my tooltip"
+    matTooltipPosition="right">Some text</span>
+</div>
