--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -100,3 +100,18 @@
     matTooltip="Here is my tooltip"
     matTooltipPosition="right">Some text</span>
 </div>
+
+<div>
+  <mat-tab-group>
+    <mat-tab label="Billing">
+      <div class="tab-content">
+        Content of billing tab
+      </div>
+    </mat-tab>
+    <mat-tab label="Shipping">
+      <div class="tab-content">
+        Content of shipping tab
+      </div>
+    </mat-tab>
+  </mat-tab-group>
+</div>
