--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -115,3 +115,9 @@
     </mat-tab>
   </mat-tab-group>
 </div>
+
+<div>
+  <button
+    mat-raised-button
+    (click)="openDialog()">Open Dialog</button>
+</div>
