--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -121,3 +121,6 @@
     mat-raised-button
     (click)="openDialog()">Open Dialog</button>
 </div>
+
+<h1 class="heading">Heading 1</h1>
+<h2 class="heading">Heading 2</h2>
