--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -122,5 +122,12 @@
     (click)="openDialog()">Open Dialog</button>
 </div>
 
-<h1 class="heading">Heading 1</h1>
-<h2 class="heading">Heading 2</h2>
+<div>
+  <h1 class="heading">Heading 1</h1>
+  <h2 class="heading">Heading 2</h2>
+</div>
+
+<div>
+  <button color="primary" mat-raised-button>Button 1</button>
+  <button color="accent" mat-raised-button>Button 2</button>
+</div>
