--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,6 +1,16 @@
-//@import "another.scss";
+@import "~@angular/material/_theming";
+
+@include mat-core();
 
 $color: blue;
+
+$app-primary: mat-palette($mat-blue, 600);
+$app-accent: mat-palette($mat-yellow, 700);
+$app-warn: mat-palette($mat-red);
+
+$app-theme: mat-light-theme($app-primary, $app-accent, $app-warn);
+
+@include angular-material-theme($app-theme);
 
 .heading { color: $color; }
 .heading { color: $color; }
