--- a/src/theme.scss
+++ b/src/theme.scss
@@ -4,6 +4,7 @@
 
 $color: blue;
 
+// define custom theme
 $app-primary: mat-palette($mat-blue, 600);
 $app-accent: mat-palette($mat-yellow, 700);
 $app-warn: mat-palette($mat-red);
@@ -11,6 +12,14 @@ $app-warn: mat-palette($mat-red);
 $app-theme: mat-light-theme($app-primary, $app-accent, $app-warn);
 
 @include angular-material-theme($app-theme);
+
+//define custom typography
+$app-typography: mat-typography-config(
+  $font-family: '"Open Sans", "Helvetica Neue", sans-serif',
+  $headline: mat-typography-level(35px, 32px, 700)
+);
+
+@include angular-material-typography($app-typography);
 
 .heading { color: $color; }
 .heading { color: $color; }
